# type-errors-pretty

./: .gitignore  .travis.yml  CHANGELOG.md  README.md  appveyor.yml  default.nix  stack.yaml  type-errors-pretty.cabal
.github/workflows/: ci.yml
src/: TypeErrorsPretty.hs
src/Type/Errors/: Helpers.hs  Pretty.hs
test/: Doctest.hs
